# GIS-ML-Workflow

./: .gitignore  README.md  requirements.txt  run_112_workflow.sh  run_224_workflow.sh  run_56_workflow.sh  run_jupyter.sh  run_large_jupyter.sh  run_vdi.sh  setup.cfg
configurations_examples/: drift_configuration.ini  reference_configuration.ini  shap_configuration.ini  testing_configuration.ini
mlwkf/: __main__.py  constants.py  evaluation_metrics.py  objective_funtions.py  utlities.py
mlwkf/covariates_drift/: pipeline.py  utlities.py
mlwkf/data_exploration/: pipeline.py  utlities.py
mlwkf/data_preparation/: pipeline.py  utlities.py
mlwkf/feature_extraction/: pipeline.py  utlities.py
mlwkf/feature_extraction/algorithms/: cv_elimination.py  elimination.py  groupcv.py  oos_elimination.py  randomness.py  shap.py
mlwkf/hyperparameter_optimization/: pipeline.py  utlities.py
mlwkf/hyperparameter_optimization/algorithms/: bayesian_search.py  grid_search.py  hebo_search.py  hyperopt_search.py
mlwkf/model_exploration/: pipeline.py  utlities.py
mlwkf/models/: bootstrapped_models.py  ensemble_models.py  standard_models.py
mlwkf/prediction_mapping/: pipeline.py  utlities.py
tests/: conftest.py  test_config_file.py  test_data_preparation.py  test_system.py  tests_constants.py
tests/testdata/: testing_configuration.ini
