[metadata]
name = mlwkf
version = 1.0.0
author = Sheece Gardezi
author_email = sheecegardezi@gmail.com
description = Machine Learning Workflow for Geoscience
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GeoscienceAustralia/MLWorkflow
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
